k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: turbine-sensor-service
spec:
  type: ClusterIP
  selector:
    app: turbine-sensor
  ports:
    - port: 80
      targetPort: 8080
